[gd_scene load_steps=6 format=3 uid="uid://xx5ftumg68k2"]

[ext_resource type="LabelSettings" uid="uid://efdir2vdny11" path="res://assets/GM_32_Dark.tres" id="1_6o4r2"]
[ext_resource type="Script" path="res://scenes/game/game.gd" id="1_ra1g4"]
[ext_resource type="Texture2D" uid="uid://7pgd4p7bsuxs" path="res://assets/ui/blue_button00.png" id="2_r8val"]
[ext_resource type="Texture2D" uid="uid://yg3tnn0lqs1b" path="res://assets/ui/green_button00.png" id="3_4srgt"]
[ext_resource type="LabelSettings" uid="uid://bb630qrhxr0ef" path="res://assets/GM_32_White.tres" id="4_42hg0"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ra1g4")

[node name="HB" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="HB"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="GridContainer" type="GridContainer" parent="HB/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer2" type="MarginContainer" parent="HB"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_constants/margin_right = 12

[node name="VBoxContainer" type="VBoxContainer" parent="HB/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="HB/MarginContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HB/MarginContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Moves"
label_settings = ExtResource("1_6o4r2")

[node name="LabelMoves" type="Label" parent="HB/MarginContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "000"
label_settings = ExtResource("1_6o4r2")
horizontal_alignment = 2
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="HB/MarginContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HB/MarginContainer2/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Pairs"
label_settings = ExtResource("1_6o4r2")

[node name="LabelPairs" type="Label" parent="HB/MarginContainer2/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "00/12"
label_settings = ExtResource("1_6o4r2")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Spacer" type="Control" parent="HB/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="ExitButton" type="TextureButton" parent="HB/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("2_r8val")
texture_pressed = ExtResource("3_4srgt")

[node name="Label" type="Label" parent="HB/MarginContainer2/VBoxContainer/ExitButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "EXIT"
label_settings = ExtResource("4_42hg0")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="HB/MarginContainer2/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
